--- a/Register.html
+++ b/Register.html
@@ -16,6 +16,6 @@
             <label for="comments">Comments:</label><br>
            <textarea id="comments" name="comments" ></textarea><br><br>
             <input type="submit" value="Register">
-</form>
+</form>ee
 </body>
 </html>
